# assembly_project

./: CMakeLists.txt  INSTALL.md  README.md  TC1-playtone.s  TC1.s  TC10.s  TC2.s  TC3-loopbeep.s  TC3.s  TC4.s  TC5.s  TC6.s  TC7.s  TC9.s  audio.s  handlewpaddle.s  initial code.cpp  test case 1.txt  test case 2.txt  test case 3.txt  test case 4.txt  test case 5.txt  test case 6.txt  test case 7.txt  test case 8.txt  test_add_print.asm  test_beq_branch.asm  test_blt_branch.asm  themesong.s  z16sim-2  z16sim-2.c  zx_16_simulator.cpp
src/: DataLoader.cpp  DataLoader.h  alu.cpp  alu.h  decoder.cpp  decoder.h  ecalls.cpp  ecalls.h  graphics.cpp  graphics.h  main.cpp  memory.cpp  memory.h  registers.cpp  registers.h  simulator.cpp  simulator.h  utils.cpp  utils.h
test/: ecall_test2.s  ex-1.s  print_int.s  print_steps.s
